# cplusplus-project-template

./: .gitignore  CMakeLists.txt  CMakeLists.txt-bak  README.md  \
config/: test.txt
include/: Test.h  testh.h  testsayoneh.h  testsaytwoh.h
include/global/: test_global.h
include/template/: TestTemplate.hpp
lib/: libtestjni.so-cp
src/: testcpp.cpp  testcpp1.cpp  testhdef.cpp  testsayone.cpp  testsaytwo.cpp
src/global/: test_global.cpp
src/ld/: TestSo.cpp
src/normal/: TestDestruct.hpp  TestSocket.hpp
src/template/: TestTemplate.cpp
